k8s/deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      name: my-app
      labels:
        app: my-app
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 20
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 20
      containers:
        - name: my-app
          image: kaylleur/myapp:2.0.0 # <-- Change this to your image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /opt/my-app
              name: my-file
      volumes:
        - name: my-file
          configMap:
            name: my-app-config
            items:
              - key: MY_FILE
                path: my_file.txt
