k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  containers:
    - name: my-app
      image: kaylleur/myapp:1.0.2
      ports:
        - containerPort: 3000
