k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
  labels:
    app: my-app
spec:
    ports:
      - name: my-app
        port: 3000
        protocol: TCP
        targetPort: 3000
    selector:
        app: my-app
