k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: metrics.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-prom-prometheus-node-exporter
                port:
                  number: 9100
    - host: prometheus.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-prom-prometheus-server
                port:
                  number: 80
    - host: grafana.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-grafana
                port:
                  number: 3000
