k8s/wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
        labels:
          app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  ports:
    - name: wordpress
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: wordpress.local
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
